# CFD_Parallelized_MPI

./: CMakeLists.txt  README.md  boundary_val.cpp  boundary_val.hpp  cell.cpp  datastructures.hpp  helper.cpp  main.cpp  mkdocs.yml  parallel.cpp  sor.hpp  visual.hpp
docs/: README.md
docs/Gitlab_CI/: docu_ci.md
docs/Parallelization/: MPI_Cart.md
docs/Setup/: 1_VM.md  2_Git.md
docs/Tools/PGM_Tool/: Debugging.md  Introduction.md
docs/Tools/VTK_Tools/: Compare_Tool.md  Merge_Tool.md  Tools.md
docs/img/: Flask_App.drawio  VTK_Merge_Diagram.drawio
includes/: cell.hpp  enums.hpp  grid.hpp  helper.hpp  init.hpp  parallel.hpp  uvp.hpp
src/: grid.cpp  init.cpp  sor.cpp  uvp.cpp  visual.cpp
tests/: CMakeLists.txt  catch_config.hpp  sample_test.cpp
tools/PGM_Tool/: app.py  index.html  pipeline.example.yml
tools/PGM_Tool/Docker/: Dockerfile
tools/PGM_Tool/misc/: README.md  convert_flask_template.sh
tools/PGM_Tool/static/css/: main.css
tools/PGM_Tool/static/js/: init.js  jexcel.js  restore.js
tools/PGM_Tool/static/js/modules/: dicts.mjs  functions.mjs  logger.mjs  table.mjs
tools/PGM_Tool/templates/: index_flask.html
tools/VTK_Tools/: CMakeLists.txt  Compare.cpp  FileIterator.cpp  FileIterator.hpp  Merge.cpp  Reader.cpp  Reader.hpp  cxxopts.hpp  helper.hpp
tools/VTK_Tools/Misc/Merged/: output_0.vtk
tools/VTK_Tools/Misc/VTK_Compare/: output.1.vtk
tools/VTK_Tools/Misc/VTK_Origin/: output.1.vtk
tools/VTK_Tools/Misc/VTK_Subdomains/: output_0.0.vtk  output_2.0.vtk  output_3.0.vtk
tools/VTK_Tools/tests/: CMakeLists.txt  merge.cpp
